--- a/favorite-things.html
+++ b/favorite-things.html
@@ -38,20 +38,19 @@
         <a href="#menu" class="mobile-menu-link">
           <span class="bar"></span><span class="bar"></span>
         </a>
-        <h3 class="name"><a class="nav" href="index.html">Chris Heuberger</a></h3>
-        <p class="title">front-end web developer</p>
+        <h3 class="name"><a class="nav-link" href="index.html">Chris Heuberger</a></h3>
         <nav>
           <ul id="menu" class="nav-ul">
-            <li><a class="nav" href="about.html">About</a></li>
-            <li><a class="nav" href="work.html">Work</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="work.html">Work</a></li>
             <br>
-            <li><a class="nav" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-            <li><a class="nav" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer">CodePen</a></li>
-            <li><a class="nav" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-            <li><a class="nav" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-            <li><a class="nav" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-            <li><a class="nav" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-            <li><a class="nav" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com">email</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer">CodePen</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a class="nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com">email</a></li>
           </ul>
         </nav>
       </div>
@@ -257,7 +256,7 @@
                 <span class="category">Music</span>
               </div>
               <div class="package">
-                <span class="name"><a class="faves-link" href="https://www.instagram.com/p/BxQ9y2ZFmt3/" target="_blank" rel="noopener noreferrer">Sarah Goldstone singing Dolly</a> and <a class="faves-link" href="https://open.spotify.com/track/5kNnINqsYOjV2ROreqRUa9?si=daAcD4TxT8qXfpUK-BSi4A" target="_blank" rel="noopener noreferrer">Dolly's original</a>.</span><br>
+                <span class="name">Sarah Goldstone singing Dolly Parton's <a class="faves-link" href="https://www.instagram.com/p/BxQ9y2ZFmt3/" target="_blank" rel="noopener noreferrer">Gonna Hurry (As Slow As I Can)</a> and <a class="faves-link" href="https://open.spotify.com/track/5kNnINqsYOjV2ROreqRUa9?si=daAcD4TxT8qXfpUK-BSi4A" target="_blank" rel="noopener noreferrer">Dolly's original</a>.</span><br>
                 <span class="category">Music</span>
               </div>
               <!-- <div class="package">
