--- a/favorite-things.html
+++ b/favorite-things.html
@@ -36,9 +36,6 @@
 
     <div class="sidebar">
       <div class="sidebar-content">
-        <a href="#menu" class="mobile-menu-link">
-          <span class="bar"></span><span class="bar"></span>
-        </a>
         <h3 class="name"><a class="nav-link" href="index.html">Chris Heuberger</a></h3>
         <nav>
           <ul id="menu" class="nav-ul">
@@ -285,6 +282,10 @@
               <div class="package">
                 <span class="name">Sarah Goldstone singing Dolly Parton's <a class="faves-link" href="https://www.instagram.com/p/BxQ9y2ZFmt3/" target="_blank" rel="noopener noreferrer">“Gonna Hurry (As Slow As I Can)”</a> and <a class="faves-link" href="https://open.spotify.com/track/5kNnINqsYOjV2ROreqRUa9?si=daAcD4TxT8qXfpUK-BSi4A" target="_blank" rel="noopener noreferrer">Dolly's original</a>.</span><br>
                 <span class="category">Music</span>
+              </div>
+              <div class="package">
+                <span class="name">I am a huge fan of <a class="faves-link" href="https://www.theschooloflife.com/" target="_blank" rel="noopener noreferrer">The School of Life</a> and their delightful <a class="faves-link" href="https://www.youtube.com/user/schooloflifechannel/videos" target="_blank" rel="noopener noreferrer">YouTube channel</a>. Load all the videos and marvel at the wisdom and sheer range of fascinating and quirky topics. Some highlights: <a class="faves-link" href="https://www.youtube.com/watch?v=q54VyCpXDH8" target="_blank" rel="noopener noreferrer">Why Hegel Knew There Would Be Days like These</a>, <a class="faves-link" href="https://www.youtube.com/watch?v=jltM5qYn25w" target="_blank" rel="noopener noreferrer">How Romanticism Ruined Love</a>, and <a class="faves-link" href="https://www.youtube.com/watch?v=QmHLYhxYVjA" target="_blank" rel="noopener noreferrer">Wabi Sabi</a>.</span><br>
+                <span class="category">History</span>
               </div>
               <!-- <div class="package">
                 <span class="name"><a class="faves-link" href="xxx" target="_blank" rel="noopener noreferrer">xxx</a> xxx</span><br>
